added jsonapi-resource interface for Project, Task & Comment controllers, fixed tests & Swagger docs
