# app/resources/api/v1/project_resource.rb
@@ -1,0 +1,5 @@
+module Api::V1
+  class ProjectResource < JSONAPI::Resource
+    attributes :name
+  end
+end
