# app/serializers/comment_serializer.rb
@@ -1,4 +1,0 @@
-class CommentSerializer < ActiveModel::Serializer
-  attributes :id, :body, :attachment
-  has_one :task
-end
