# public/apidocs/api-docs.yml
@@ -29,15 +29,15 @@ paths:
       summary: Show all projects
       description: Returns a all users' project
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       responses:
         200:
           description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Project'
+#          schema:
+#            type: array
+#            items:
+#              $ref: '#/definitions/Project'
         404:
           description: Projects not found
       security:
@@ -50,14 +50,14 @@ paths:
       summary: Add a new project to the current user
       operationId: addProject
       consumes:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - in: body
-        name: project
+        name: data
         description: Project object that needs to be added
         required: true
         schema:
@@ -76,20 +76,20 @@ paths:
       summary: Update an existing project
       operationId: updateProject
       consumes:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
-        description: Project id to delete
+        description: Project id to update
         required: true
         type: integer
         format: int64
       - in: body
-        name: project
+        name: data
         description: Project object that needs to be added to current user
         required: true
         schema:
@@ -112,8 +112,8 @@ paths:
       description: Returns a single project
       operationId: getProjectById
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -124,8 +124,8 @@ paths:
       responses:
         200:
           description: successful operation
-          schema:
-            $ref: '#/definitions/Project'
+#          schema:
+#            $ref: '#/definitions/Project'
         400:
           description: Invalid ID supplied
         404:
@@ -140,8 +140,8 @@ paths:
       summary: Deletes a project
       operationId: deleteProject
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -166,8 +166,8 @@ paths:
       summary: Show all projects' tasks
       description: Returns a all projects' tasks
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -178,10 +178,10 @@ paths:
       responses:
         200:
           description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Task'
+#          schema:
+#            type: array
+#            items:
+#              $ref: '#/definitions/Task'
         404:
           description: Task not found
       security:
@@ -194,11 +194,11 @@ paths:
       summary: Add a new task to the project
       operationId: addTask
       consumes:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -207,7 +207,7 @@ paths:
         type: integer
         format: int64
       - in: body
-        name: task
+        name: data
         description: Task object that needs to be added
         required: true
         schema:
@@ -226,11 +226,11 @@ paths:
       summary: Update an existing task
       operationId: updateTask
       consumes:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -245,7 +245,7 @@ paths:
         type: integer
         format: int64
       - in: body
-        name: task
+        name: data
         description: Task object that needs to be added to current project
         required: true
         schema:
@@ -268,8 +268,8 @@ paths:
       description: Returns a single task
       operationId: getTaskById
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -286,8 +286,8 @@ paths:
       responses:
         200:
           description: successful operation
-          schema:
-            $ref: '#/definitions/Task'
+#          schema:
+#            $ref: '#/definitions/Task'
         400:
           description: Invalid ID supplied
         404:
@@ -302,8 +302,8 @@ paths:
       summary: Deletes a task
       operationId: deleteTask
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -334,8 +334,8 @@ paths:
       summary: Show all projects' tasks
       description: Returns a all projects' tasks
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -352,10 +352,10 @@ paths:
       responses:
         200:
           description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Comment'
+#          schema:
+#            type: array
+#            items:
+#              $ref: '#/definitions/Comment'
         404:
           description: Comment not found
       security:
@@ -368,12 +368,12 @@ paths:
       summary: Add a new comment to the task
       operationId: addComment
       consumes:
+      - application/vnd.api+json
       - application/json
       - multipart/form-data
-      - application/xml
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -396,7 +396,7 @@ paths:
 #        type: file
 #        in: formData
       - in: body
-        name: comment
+        name: data
         description: Comment object that needs to be added to current task
         required: true
         schema:
@@ -415,8 +415,8 @@ paths:
       summary: Deletes a comment
       operationId: deleteComment
       produces:
+      - application/vnd.api+json
       - application/json
-      - application/xml
       parameters:
       - name: projectId
         in: path
@@ -582,8 +582,6 @@ definitions:
       password:
         type: string
         format: /\A[a-zA-Z\d]{8}\z/
-    xml:
-      name: User
   Project:
     type: object
     required:
@@ -597,8 +595,12 @@ definitions:
       name:
         type: string
         example: my-project
-    xml:
-      name: Project
+    example:   # <----------
+      data:
+        type: projects
+        id: 38
+        attributes:
+          name: my-project
   Task:
     type: object
     required:
@@ -622,8 +624,15 @@ definitions:
       done:
         type: boolean
         default: false
-    xml:
-      name: Project
+    example:   # <----------
+      data:
+        type: tasks
+        id: 1
+        attributes:
+          name: my-task
+          position: 1
+          deadline: '2017-11-11T12:08:54.263Z'
+          done: false
   Comment:
     type: object
     required:
@@ -641,13 +650,19 @@ definitions:
       attachment:
         type: string
         format: 'File should be *.png/*.jpg image, less than 10Mb'
+    example:   # <----------
+      data:
+        type: comments
+        attributes:
+          body: 'new comment'
+          attachment: 'file_attachment.png'
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 # Added by API Auto Mocking Plugin
 host: t-manager-board.herokuapp.com
 # host: localhost:3000
-# basePath: /abratashov/TManager_v1/1.0.0
+basePath: /api/v1
 schemes:
  - http
  - https
